<resources>
    <string name="app_name">Pokedex APP</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="ordenar">Ordenar por tipo</string>
    <string name="order">Ordenar</string>
    <string name="steel_type">Acero</string>
    <string name="water_type">Agua</string>
    <string name="bug_type">Insecto</string>
    <string name="dragon_type">Dragón</string>
    <string name="electric_type">Eléctrico</string>
    <string name="ghost_type">Fantasma</string>
    <string name="fire_type">Fuego</string>
    <string name="fairy_type">Hada</string>
    <string name="ice_type">Hielo</string>
    <string name="fighting_type">Luchador</string>
    <string name="normal_type">Normal</string>
    <string name="grass_type">Planta</string>
    <string name="psychic_type">Psíquico</string>
    <string name="rock_type">Roca</string>
    <string name="dark_type">Siniestro</string>
    <string name="ground_type">Tierra</string>
    <string name="poison_type">Veneno</string>
    <string name="flying_type">Volador</string>
    <string name="default_type">Default</string>
    <string name="menu_text">¡Pulsa para empezar!</string>
    <string name="search_pokemon">Pulsa para buscar un Pokemon</string>
    <string name="dialog_advice">Deslice hacia la derecha en la parte superior de la pantalla para volver atras.</string>
    <string name="dialog_second_advice">Deslice hacia abajo en la parte inferior de la pantalla para ver más información de este Pokemon. </string>
    <string name="consejo">Consejo</string>
    <string name="dialog_close">Toque la pantalla para cerrar</string>
    <string name="estadisticas_base">Estadísticas Base</string>
    <string name="todos">Todos</string>
    <string name="toast_internet">Necesitas conexión a Internet para utilizar la aplicación.\n Pruebe más tarde.</string>

    <string name="stat_1">PS</string>
    <string name="stat_2">Ataque</string>
    <string name="stat_3">Defensa</string>
    <string name="stat_4">Velocidad</string>
    <string name="stat_5">At. Especial</string>
    <string name="stat_6">Def. Especial</string>

</resources>