<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvPokemonItemType"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:padding="16dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="20dp"
            android:text="@string/ordenar"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="75dp">

            <LinearLayout
                android:id="@+id/llOrderType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/llSteelType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/linear_layout_border"
                    android:padding="8dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/steel_type"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llWaterType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/linear_layout_border"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/water_type"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llBugType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/linear_layout_border"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/bug_type"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llDragonType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/linear_layout_border"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/dragon_type"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llElectricType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/linear_layout_border"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/electric_type"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llGhostType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/linear_layout_border"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/ghost_type"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llFireType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/linear_layout_border"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/fire_type"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llFairyType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/linear_layout_border"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/fairy_type"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llIceType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/linear_layout_border"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/ice_type"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llFightingType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/linear_layout_border"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/fighting_type"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llNormalType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/linear_layout_border"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/normal_type"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llGrassType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/linear_layout_border"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/grass_type"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPsychicType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/linear_layout_border"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/psychic_type"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llRockType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/linear_layout_border"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/rock_type"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llDarkType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/linear_layout_border"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/dark_type"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llGroundType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/linear_layout_border"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/ground_type"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPoisonType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/linear_layout_border"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/poison_type"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llFlyingType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/linear_layout_border"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/flying_type"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOrderDialog"
            android:layout_width="120dp"
            android:layout_height="50dp"
            app:cornerRadius="4dp"
            app:strokeColor="@color/black"
            android:text="@string/order"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            app:strokeWidth="2dp"
            android:layout_gravity="bottom|center"
            android:layout_margin="10dp"
            android:backgroundTint="@color/white" />

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>