<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvDialog"
    android:layout_width="250dp"
    android:layout_height="160dp"
    android:layout_gravity="center"
    android:padding="20dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="4dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:strokeColor="@color/black"
    app:strokeWidth="3dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="20dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:text="@string/consejo"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="55dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:text="@string/dialog_second_advice"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvcloseDialog"
        android:layout_width="wrap_content"
        android:text="@string/dialog_close"
        android:layout_gravity="center|top"
        android:layout_marginTop="130dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"/>


</com.google.android.material.card.MaterialCardView>

